--- a/examples/first-agent/package.json
+++ b/examples/first-agent/package.json
@@ -1,15 +1,13 @@
 {
   "name": "first-agent",
   "private": true,
-  "version": "0.0.0",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "start": "node dist/index.js",
-    "build": "tsc"
+    "clean": "rm -rf dist node_modules package-lock.json",
+    "build": "tsc",
+    "start": "tsc && node dist/index.js"
   },
-  "author": "",
-  "license": "ISC",
   "workspaces": [
     "../../"
   ],
