--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "./bedrock": {
       "import": "./dist/models/bedrock.js",
       "types": "./dist/models/bedrock.d.ts"
+    },
+    "./vendedTools/http-request": {
+      "import": "./dist/vendedTools/http-request/index.js",
+      "types": "./dist/vendedTools/http-request/index.d.ts"
     }
   },
   "scripts": {
@@ -36,10 +40,10 @@
     "test:browser:install": "npx playwright install --with-deps chromium",
     "test:all": "vitest run --project unit-node --project unit-browser",
     "test:all:coverage": "vitest run --coverage --project unit-node --project unit-browser",
-    "lint": "eslint src tests_integ",
-    "lint:fix": "eslint src tests_integ --fix",
-    "format": "prettier --write src tests_integ",
-    "format:check": "prettier --check src tests_integ",
+    "lint": "eslint src tests_integ vendedTools",
+    "lint:fix": "eslint src tests_integ vendedTools --fix",
+    "format": "prettier --write src tests_integ vendedTools",
+    "format:check": "prettier --check src tests_integ vendedTools",
     "type-check": "tsc --noEmit",
     "type-check:watch": "tsc --noEmit --watch",
     "prepare": "husky"
