--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "declaration": true,
     "declarationMap": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
@@ -27,6 +27,6 @@
     "sourceMap": true,
     "removeComments": false
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "vendedTools/**/*"],
   "exclude": ["node_modules", "dist"]
 }
