--- a/.github/workflows/pr-and-push.yml
+++ b/.github/workflows/pr-and-push.yml
@@ -4,6 +4,8 @@ on:
   pull_request:  # Safer than pull_request_target for untrusted code
     branches: [ main ]
     types: [opened, synchronize, reopened, ready_for_review]
+  merge_group: # Run tests in merge queue
+    types: [checks_requested]
   push:
     branches: [ main ]  # Also run on direct pushes to main
 concurrency:
