--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@aws-sdk/client-secrets-manager": "^3.921.0",
     "@aws-sdk/credential-providers": "^3.913.0",
     "@types/json-schema": "^7.0.15",
+    "@types/mime-types": "^3.0.1",
     "@types/node": "^24.6.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
@@ -94,6 +95,7 @@
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.911.0",
     "@modelcontextprotocol/sdk": "^1.20.2",
+    "mime-types": "^3.0.1",
     "zod": "^4.1.12"
   },
   "optionalDependencies": {
