--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "test:watch": "vitest --project unit-node",
     "test:coverage": "vitest run --coverage --project unit-node",
     "test:types": "vitest run --project types",
-    "test:integ": "vitest run --project integ",
+    "test:integ": "vitest run --project integ-node",
     "test:integ:browser": "vitest run --project integ-browser",
-    "test:integ:all": "vitest run --project integ --project integ-browser",
+    "test:integ:all": "vitest run --project integ-node --project integ-browser",
     "test:browser": "vitest run --project unit-browser",
     "test:browser:install": "npx playwright install --with-deps chromium",
     "test:all": "vitest run --project unit-node --project unit-browser",
