--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -76,12 +76,10 @@ jobs:
           node-version: 22
 
       - name: Install dependencies
-        run: |
-          npm install
-          npm run test:browser:install
+        run: npm install
 
       - name: Build the package
         run: npm run build
 
       - name: Run integration tests
-        run: npm run test:integ:all
+        run: npm run test:integ
